ruby-ex-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  generation: 1
  labels:
    app: ruby-ex
  name: ruby-ex
  selfLink: /apis/apps.openshift.io/v1/namespaces/myproject/deploymentconfigs/ruby-ex
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: ruby-ex
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ruby-ex
        deploymentconfig: ruby-ex
    spec:
      containers:
      - image: 172.30.1.1:5000/myproject/ruby-ex@sha256:741c031837a594d8af2130983bbca0c8116e75207c383053d892adfc94f3b5e5
        imagePullPolicy: Always
        name: ruby-ex
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      containerNames:
      - ruby-ex
      from:
        kind: ImageStreamTag
        name: ruby-ex:latest
        namespace: myproject
    type: ImageChange
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
